// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOCEntry is rendered 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    gutterSize="none"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <LayerTocActions
        cloneLayer={[Function]}
        displayName="layer 1"
        editLayer={[Function]}
        fitToBounds={[Function]}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiText>
        <div
          className="mapTocEntry__layerName eui-textTruncate eui-textLeft"
          onClick={[Function]}
          style={
            Object {
              "maxWidth": "19rem",
            }
          }
        >
          layer 1
        </div>
        <span
          className="mapTocEntry__layerIcons"
        >
          <EuiButtonIcon
            aria-label="Edit layer"
            color="primary"
            iconSize="m"
            iconType="pencil"
            onClick={[Function]}
            title="Edit layer"
            type="button"
          />
          <span
            className="mapTocEntry__grab"
          >
            <EuiIcon
              type="grab"
            />
          </span>
        </span>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`TOCEntry props isReadOnly 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    gutterSize="none"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <LayerTocActions
        cloneLayer={[Function]}
        displayName="layer 1"
        editLayer={[Function]}
        fitToBounds={[Function]}
        isReadOnly={true}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiText>
        <div
          className="mapTocEntry__layerName eui-textTruncate eui-textLeft"
          onClick={[Function]}
          style={
            Object {
              "maxWidth": "19rem",
            }
          }
        >
          layer 1
        </div>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`TOCEntry props should display layer details when layer id is in openTOCDetails 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    gutterSize="none"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <LayerTocActions
        cloneLayer={[Function]}
        displayName="layer 1"
        editLayer={[Function]}
        fitToBounds={[Function]}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiText>
        <div
          className="mapTocEntry__layerName eui-textTruncate eui-textLeft"
          onClick={[Function]}
          style={
            Object {
              "maxWidth": "19rem",
            }
          }
        >
          layer 1
        </div>
        <span
          className="mapTocEntry__layerIcons"
        >
          <EuiButtonIcon
            aria-label="Edit layer"
            color="primary"
            iconSize="m"
            iconType="pencil"
            onClick={[Function]}
            title="Edit layer"
            type="button"
          />
          <span
            className="mapTocEntry__grab"
          >
            <EuiIcon
              type="grab"
            />
          </span>
        </span>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    data-test-subj="mapLayerTOCDetailslayer_1"
  >
    <div>
      TOC details mock
    </div>
  </div>
</div>
`;
